updates to frontend

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@web3-onboard/ledger": "^2.4.6",
     "@web3-onboard/react": "^2.8.7",
     "@web3-onboard/walletconnect": "^2.3.9",
+    "axios": "^1.6.1",
     "base64-js": "^1.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
@@ -37,12 +38,16 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18",
     "react-grid-layout": "^1.4.3",
+    "react-native-progress": "^5.0.1",
     "react-singleton-hook": "^4.0.1",
     "styled": "^1.0.0",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
